@startuml

title __SERVICE's Class Diagram__\n

  namespace ub.edu.resources.service {
    interface ub.edu.resources.service.AbstractFactoryData {
        {abstract} + createDAOClient()
        {abstract} + createDAOEpisodi()
        {abstract} + createDAOFollowers()
        {abstract} + createDAOFollowing()
        {abstract} + createDAOMyList()
        {abstract} + createDAOPost()
        {abstract} + createDAOSerie()
        {abstract} + createDAOTemporada()
        {abstract} + createDAOUsuari()
        {abstract} + createDAOValoracioEstrella()
        {abstract} + createDAOValoracioThumb()
        {abstract} + createDAOWatching()
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.DataService {
        + DataService()
        + addUsuari()
        + finishWatching()
        + getAllClients()
        + getAllEpisodis()
        + getAllPosts()
        + getAllSeries()
        + getAllTemporades()
        + getAllUsuaris()
        + getClientByUsuariAndPassword()
        + getFollowersForUsuari()
        + getFollowingForUsuari()
        + getMyListForUsuari()
        + getUsuarisByClient()
        + getValoracioEstrella()
        + getValoracioThumb()
        + getWatchingForUsuari()
        + isTakenUsernameU()
        + isTakenUsernameUsername()
        + markInMyList()
        + pauseWatching()
        + setValoracioEstrella()
        + setValoracioThumb()
        + startWatching()
        + unmarkInMyList()
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.FactoryMOCK {
        + createDAOClient()
        + createDAOEpisodi()
        + createDAOFollowers()
        + createDAOFollowing()
        + createDAOMyList()
        + createDAOPost()
        + createDAOSerie()
        + createDAOTemporada()
        + createDAOUsuari()
        + createDAOValoracioEstrella()
        + createDAOValoracioThumb()
        + createDAOWatching()
    }
  }
  

  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOEpisodi : EpisodiDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOTemporada : TemporadaDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOValoracioEstrella : ValoracioEstrellaDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOValoracioThumb : ValoracioThumbDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOClient : clientDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOFollowers : followersDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOFollowing : followingDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOMyList : mylistDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOPost : postDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOSerie : serieDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOUsuari : usuariDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOWatching : watchingDAO
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
